# goodwe-inverter-emulator

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  config-default.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml  release.yml
app/: __init__.py  config.py  main.py  models.py  version.py
app/datasources/: __init__.py  em540_client.py  fronius_client.py  modbus_resilience.py  victron_client.py
app/goodwe/: __init__.py  register_codec.py  register_map.py  server.py
goodwe_client_test/: main.py
references/extracted/: goodwe-745-map.txt
tests/: config_test.py  em540_to_goodwe_meter_test.py  fronius_client_test.py  modbus_recovery_test.py  runtime_safety_test.py
tests/goodwe/: register_codec_test.py  register_map_test.py
